[gd_scene load_steps=15 format=3 uid="uid://c8fx7qnw2kc7d"]

[ext_resource type="Script" path="res://scenes and scripts/Room.gd" id="1_athws"]
[ext_resource type="PackedScene" uid="uid://b78ylew74y44e" path="res://scenes and scripts/player.tscn" id="2_e1whh"]
[ext_resource type="Texture2D" uid="uid://bap0silmqd3fd" path="res://images/11png.png" id="2_thf6k"]
[ext_resource type="PackedScene" uid="uid://de8nomw8v04or" path="res://scenes and scripts/camera_2d.tscn" id="3_5ss2m"]
[ext_resource type="Script" path="res://scenes and scripts/npc.gd" id="3_cr10d"]
[ext_resource type="PackedScene" uid="uid://bakqkoure4xto" path="res://scenes and scripts/thisitem.tscn" id="4_j4wws"]
[ext_resource type="Script" path="res://scenes and scripts/dialogue.gd" id="5_7vhgh"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_chlnv"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_01762"]
normal = Vector2(1, 2.08165e-12)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_xop5c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wdqhc"]
size = Vector2(400, 20)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_sgl6i"]
normal = Vector2(-1, 2.08165e-12)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5j4sx"]
bg_color = Color(0.0823529, 0.133333, 0.211765, 0.803922)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12

[sub_resource type="Theme" id="Theme_qqv23"]
Panel/styles/panel = SubResource("StyleBoxFlat_5j4sx")

[node name="main" type="Node2D"]

[node name="roomnode" type="Node2D" parent="."]
script = ExtResource("1_athws")

[node name="main room" type="Node2D" parent="roomnode"]

[node name="StaticBody2D" type="StaticBody2D" parent="roomnode/main room"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="roomnode/main room/StaticBody2D"]
position = Vector2(960, 980)
shape = SubResource("WorldBoundaryShape2D_chlnv")

[node name="StaticBody2D2" type="StaticBody2D" parent="roomnode/main room"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="roomnode/main room/StaticBody2D2"]
position = Vector2(2.08165e-12, 980)
shape = SubResource("WorldBoundaryShape2D_01762")

[node name="Control" type="Control" parent="roomnode/main room"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="background" type="TextureRect" parent="roomnode/main room/Control"]
modulate = Color(0.203922, 0.298039, 0.423529, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_thf6k")

[node name="floor" type="TextureRect" parent="roomnode/main room/Control"]
modulate = Color(0.160784, 0.2, 0.25098, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 980.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_thf6k")

[node name="npc" type="CharacterBody2D" parent="roomnode/main room"]
position = Vector2(1200, 880)
collision_layer = 2
collision_mask = 4
script = ExtResource("3_cr10d")

[node name="TextureRect" type="TextureRect" parent="roomnode/main room/npc"]
modulate = Color(1, 0.85098, 0, 1)
z_index = 9
offset_left = -75.0
offset_top = -100.0
offset_right = 75.0
offset_bottom = 100.0
texture = ExtResource("2_thf6k")

[node name="Control" type="Control" parent="roomnode/main room/npc"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -220.0
offset_right = 40.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="chatIcon" type="TextureRect" parent="roomnode/main room/npc/Control"]
visible = false
z_index = 9
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_thf6k")

[node name="mouseInput" type="Control" parent="roomnode/main room/npc"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -100.0
offset_right = 75.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="quarters" type="Node2D" parent="roomnode"]
visible = false

[node name="floor" type="StaticBody2D" parent="roomnode/quarters"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="roomnode/quarters/floor"]
position = Vector2(960, 980)
shape = SubResource("WorldBoundaryShape2D_xop5c")

[node name="platform" type="StaticBody2D" parent="roomnode/quarters"]
position = Vector2(-195, -43)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="roomnode/quarters/platform"]
position = Vector2(1414, 851)
shape = SubResource("RectangleShape2D_wdqhc")

[node name="background" type="TextureRect" parent="roomnode/quarters/platform/CollisionShape2D"]
modulate = Color(0.643137, 0.486275, 0.486275, 1)
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -10.0
offset_right = 200.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_thf6k")

[node name="platform2" type="StaticBody2D" parent="roomnode/quarters"]
position = Vector2(252, -314)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="roomnode/quarters/platform2"]
position = Vector2(1414, 851)
shape = SubResource("RectangleShape2D_wdqhc")

[node name="background" type="TextureRect" parent="roomnode/quarters/platform2/CollisionShape2D"]
modulate = Color(0.643137, 0.486275, 0.486275, 1)
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -10.0
offset_right = 200.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_thf6k")

[node name="platform3" type="StaticBody2D" parent="roomnode/quarters"]
position = Vector2(-732, -427)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="roomnode/quarters/platform3"]
position = Vector2(1414, 851)
shape = SubResource("RectangleShape2D_wdqhc")

[node name="background" type="TextureRect" parent="roomnode/quarters/platform3/CollisionShape2D"]
modulate = Color(0.643137, 0.486275, 0.486275, 1)
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -10.0
offset_right = 200.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_thf6k")

[node name="Control" type="Control" parent="roomnode/quarters"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="background" type="TextureRect" parent="roomnode/quarters/Control"]
modulate = Color(0.419608, 0.298039, 0.298039, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_thf6k")

[node name="floor" type="TextureRect" parent="roomnode/quarters/Control"]
modulate = Color(0.160784, 0.2, 0.25098, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 980.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_thf6k")

[node name="item" parent="roomnode/quarters" instance=ExtResource("4_j4wws")]
modulate = Color(0.258824, 0.258824, 0.258824, 1)
position = Vector2(638, 322)
metadata/enabled = true
metadata/id = 0

[node name="lab" type="Node2D" parent="roomnode"]
visible = false

[node name="floor" type="StaticBody2D" parent="roomnode/lab"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="roomnode/lab/floor"]
position = Vector2(960, 980)
shape = SubResource("WorldBoundaryShape2D_xop5c")

[node name="platform2" type="StaticBody2D" parent="roomnode/lab"]
position = Vector2(-288, -498)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="roomnode/lab/platform2"]
position = Vector2(1414, 851)
shape = SubResource("RectangleShape2D_wdqhc")

[node name="background" type="TextureRect" parent="roomnode/lab/platform2/CollisionShape2D"]
modulate = Color(0.643137, 0.486275, 0.486275, 1)
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -10.0
offset_right = 200.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_thf6k")

[node name="platform3" type="StaticBody2D" parent="roomnode/lab"]
position = Vector2(-1000, -427)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="roomnode/lab/platform3"]
position = Vector2(1414, 851)
shape = SubResource("RectangleShape2D_wdqhc")

[node name="background" type="TextureRect" parent="roomnode/lab/platform3/CollisionShape2D"]
modulate = Color(0.643137, 0.486275, 0.486275, 1)
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -10.0
offset_right = 200.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_thf6k")

[node name="item" parent="roomnode/lab" instance=ExtResource("4_j4wws")]
modulate = Color(1, 0.619608, 1, 1)
position = Vector2(1211, 265)
metadata/enabled = false
metadata/id = 1

[node name="Control" type="Control" parent="roomnode/lab"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="background" type="TextureRect" parent="roomnode/lab/Control"]
modulate = Color(0.258824, 0.360784, 0.32549, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_thf6k")

[node name="floor" type="TextureRect" parent="roomnode/lab/Control"]
modulate = Color(0.160784, 0.2, 0.25098, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 980.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_thf6k")

[node name="rightwall" type="StaticBody2D" parent="roomnode/lab"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="roomnode/lab/rightwall"]
position = Vector2(1920, 980)
shape = SubResource("WorldBoundaryShape2D_sgl6i")

[node name="player" parent="." instance=ExtResource("2_e1whh")]
position = Vector2(960, 880)
collision_mask = 4

[node name="Camera2D" parent="." instance=ExtResource("3_5ss2m")]

[node name="gui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2

[node name="dialogue" type="Control" parent="gui"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("5_7vhgh")

[node name="textpanel" type="Panel" parent="gui/dialogue"]
layout_mode = 1
offset_left = 160.0
offset_top = 160.0
offset_right = 1760.0
offset_bottom = 460.0
mouse_filter = 2
theme = SubResource("Theme_qqv23")

[node name="MarginContainer" type="MarginContainer" parent="gui/dialogue/textpanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="text" type="Label" parent="gui/dialogue/textpanel/MarginContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 46
text = "character dialogue here!"
autowrap_mode = 3

[node name="nametag" type="Panel" parent="gui/dialogue"]
layout_mode = 1
offset_left = 160.0
offset_top = 72.0
offset_right = 760.0
offset_bottom = 172.0
mouse_filter = 2
theme = SubResource("Theme_qqv23")

[node name="MarginContainer" type="MarginContainer" parent="gui/dialogue/nametag"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="tag" type="Label" parent="gui/dialogue/nametag/MarginContainer"]
layout_direction = 2
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 46
text = "character name"

[node name="clickprompt" type="Panel" parent="gui/dialogue"]
layout_mode = 1
offset_left = 1079.0
offset_top = 448.0
offset_right = 1759.0
offset_bottom = 548.0
mouse_filter = 2
theme = SubResource("Theme_qqv23")

[node name="MarginContainer" type="MarginContainer" parent="gui/dialogue/clickprompt"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="note" type="Label" parent="gui/dialogue/clickprompt/MarginContainer"]
layout_direction = 2
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 46
text = "(click anywhere to continue)"
horizontal_alignment = 2

[connection signal="gui_input" from="roomnode/main room/npc/mouseInput" to="roomnode/main room/npc" method="_on_mouse_input_gui_input"]
[connection signal="mouse_entered" from="roomnode/main room/npc/mouseInput" to="roomnode/main room/npc" method="_on_mouse_input_mouse_entered"]
[connection signal="mouse_exited" from="roomnode/main room/npc/mouseInput" to="roomnode/main room/npc" method="_on_mouse_input_mouse_exited"]
[connection signal="gui_input" from="gui/dialogue" to="gui/dialogue" method="_on_gui_input"]
